# Visual-Studio

./: .env.example  .gitignore  BUILDER_UI_REVIEW.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  test_page.json  test_page_update.json  test_wizard.json  test_wizard2.json  test_wizard_update.json  turbo.json
apps/api/: CRUD_TESTING.md  PUBLISH_TESTING.md  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: aaf9abdcb332_initial_schema.py  d0b3ee3b7f4b_make_wizard_session_current_step_.py
apps/api/src/vsb_api/: __init__.py  config.py  db.py  db_init.py  db_migrations.py  main.py
apps/api/src/vsb_api/models/: __init__.py  audit.py  page.py  release.py  session.py  wizard.py
apps/api/src/vsb_api/routes/: health.py  pages.py  runtime.py  wizards.py
apps/api/src/vsb_api/schemas/: __init__.py
apps/api/src/vsb_api/schemas/jsonschema/: .gitkeep
apps/api/src/vsb_api/services/: audit.py  publishing.py  sessions.py  validation.py
apps/api/tests/: __init__.py  test_health.py
apps/builder-ui/: README.md  index.html  package.json
apps/builder-ui/src/: main.tsx
apps/builder-ui/src/api/: index.ts
apps/builder-ui/src/app/: App.tsx  routes.tsx
apps/builder-ui/src/components/: JsonEditor.tsx  index.ts
apps/builder-ui/src/lib/: index.ts
apps/builder-ui/src/styles/: index.css
apps/runtime-ui/: index.html  package.json  vite.lib.config.ts
apps/runtime-ui/src/: main.tsx  vite-env.d.ts
docker/postgres/: init.sql
tooling/scripts/: copy-schemas-to-api.sh  gen-openapi-client.sh  setup-dev.sh
(+24 files in other folders)
